--- a/feed.css
+++ b/feed.css
@@ -1,8 +1,33 @@
 /*Section*/
+#limpar,#salvar{
+    float:right;
+}
+span{
+    color:red;
+}
+#vue-table{
+    width:55%;
+    margin-left: 23%;
+    padding: 2%;
+    border-style: solid;
+    border-width: 1px;
+
+}
 #cadastro{
-    width: 60%;
-    margin-left: 20%;
-    padding-top: 2%;
+    width: 40%;
+    margin-left: 30%;
+    margin-top: 3%;
+    margin-bottom: 4%;
+    padding: 2%;
+    padding-bottom: 6%;
+    border-style: solid;
+    border-width: 1px;
+}
+#cadastro h2{
+    text-align: center;
+}
+#cadastro h3{
+    padding-left: 3%;
 }
 .md-card{
     padding-top: 2%;
@@ -89,4 +114,5 @@ footer{
     text-align: center;
     padding: .05%;
     margin-bottom: 0%;
+    margin-top: 5%;
 }
