--- a/index.css
+++ b/index.css
@@ -34,10 +34,12 @@ form{
 #log-in{
     padding-top: 9%;
     float: right;
+    margin-right: 0%;
+    padding-right: 0%;
+    margin-left: 30%;
 }
 #sign-up{
     padding-top: 9%;
-    margin-left: 60%;
     float: left; 
 }
 #sign-up md-button{
